--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "animate.css": "^4.1.1",
     "ngx-material-file-input": "^4.0.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.1",
